modified:   apps/catalog-service/.air.toml 	modified:   apps/catalog-service/cmd/rest_api/application.go 	modified:   apps/catalog-service/cmd/rest_api/docs/docs.go 	modified:   apps/catalog-service/cmd/rest_api/docs/swagger.json 	modified:   apps/catalog-service/cmd/rest_api/docs/swagger.yaml 	modified:   apps/catalog-service/cmd/rest_api/main.go 	modified:   apps/catalog-service/internal/application/services/product_service.go 	modified:   apps/catalog-service/internal/domain/category/category.go 	modified:   apps/catalog-service/internal/domain/product/product.go 	modified:   apps/catalog-service/internal/domain/product/product_event.go 	modified:   apps/catalog-service/internal/domain/product/product_repository.go 	modified:   apps/catalog-service/internal/domain/product/product_service.go 	new file:   apps/catalog-service/internal/infra/postgres/category_entity.go 	modified:   apps/catalog-service/internal/infra/postgres/category_repository.go 	new file:   apps/catalog-service/internal/infra/postgres/product_entity.go 	modified:   apps/catalog-service/internal/infra/postgres/product_repository.go 	modified:   apps/catalog-service/internal/infra/rest/product_rest.go 	modified:   libs/go-common/publicid/publicid.go
