# apps/catalog-service/internal/infra/postgres/category_entity.go
@@ -1,0 +1,40 @@
+package postgres
+
+import (
+	"github.com/patrickdevbr-portfolio/erp/apps/catalog-service/internal/domain/category"
+	"github.com/patrickdevbr-portfolio/erp/libs/go-common/audit"
+	"gorm.io/gorm"
+)
+
+type categoryEntity struct {
+	gorm.Model
+	ID          uint
+	PublicID    string
+	Description string
+}
+
+func (categoryEntity) TableName() string {
+	return "catalog.categories"
+}
+
+func toCategoryEntity(c *category.Category) *categoryEntity {
+	return &categoryEntity{
+		PublicID:    c.CategoryID.ToPublic(),
+		Description: c.Description,
+		Model: gorm.Model{
+			CreatedAt: c.CreatedAt,
+		},
+	}
+}
+
+func toCategoryDomain(e *categoryEntity) *category.Category {
+	categoryID, _ := category.ParseCategoryID(e.PublicID)
+
+	return &category.Category{
+		CategoryID:  categoryID,
+		Description: e.Description,
+		Audit: audit.Audit{
+			CreatedAt: e.CreatedAt,
+		},
+	}
+}
